Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -496,13 +496,14 @@
   <script>
     // ضع إعدادات firebaseConfig هنا
     const firebaseConfig = {
-      apiKey: "AIzaSyAQ5pQ1eoC9LAIvXQiwmdPPT0qNYl19lV4",
-      authDomain: "student-notifier-system1.firebaseapp.com",
-      databaseURL: "https://student-notifier-system1-default-rtdb.firebaseio.com",
-      projectId: "student-notifier-system1",
-      storageBucket: "student-notifier-system1.firebasestorage.app",
-      messagingSenderId: "12943212304",
-      appId: "1:12943212304:web:9af3ad7b954c2527ddef95"
+     const firebaseConfig = {
+  apiKey: "AIzaSyAjFyVM73XYBJIQGvKAorDXVBibH19d2EY",
+  authDomain: "mohamedanis-c1a58.firebaseapp.com",
+  databaseURL: "https://mohamedanis-c1a58-default-rtdb.firebaseio.com",
+  projectId: "mohamedanis-c1a58",
+  storageBucket: "mohamedanis-c1a58.firebasestorage.app",
+  messagingSenderId: "691365604292",
+  appId: "1:691365604292:web:ec2437640c5ed1659c1291"
     };
 
     // init
@@ -647,3 +648,4 @@
   </script>
 </body>
 </html>
+
